# output-html-page-logs

./: .env.sample  .gitignore  README.md  docker-compose.yaml  otel-collector-config.yaml  pyproject.toml
app/: __init__.py  consumer.py  routes.py  settings.py
app/models/: base.py  models.py
docker/api/: Dockerfile
docker/consumer/: Dockerfile
