[tool.poetry]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = ["Timur Galiev <timurgravirovsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
psycopg2 = "^2.9.10"
pika = "^1.3.2"
selenium = "^4.27.1"
python-dotenv = "^1.0.1"
uvicorn = "^0.32.1"
webdriver-manager = "^4.0.2"
pydantic-settings = "2.0.3"
pydantic = "^2.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
